[gd_scene load_steps=3 format=3 uid="uid://game_main_scene"]

[ext_resource type="Script" path="res://scripts/game/Game.gd" id="1_game"]
[ext_resource type="Script" path="res://scripts/game/GameCamera.gd" id="game_camera"]

[node name="Game" type="Node2D"]
script = ExtResource("1_game")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("game_camera")
position = Vector2(0, 0)

[node name="WorldRoot" type="Node2D" parent="."]
process_mode = 1

[node name="ArenaRoot" type="Node2D" parent="WorldRoot"]
process_mode = 1

[node name="EnemiesRoot" type="Node2D" parent="WorldRoot"]
process_mode = 1

[node name="PickupsRoot" type="Node2D" parent="WorldRoot"]
process_mode = 1

[node name="ProjectilesRoot" type="Node2D" parent="WorldRoot"]
process_mode = 1

[node name="PlayerContainer" type="Node2D" parent="."]
process_mode = 1
position = Vector2(0, 0)

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 100

